Update application metadata and descriptions to reflect the title and improve localization

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Kanban Task Manager - Organize your tasks efficiently" />
-    <title>Kanban Task Manager</title>
+    <meta name="description" content="Görev Yönetimi Uygulaması - Görevlerinizi verimli bir şekilde organize edin" />
+    <title>Görev Yönetimi Uygulaması</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       /* Custom scrollbar for webkit browsers */
